@@ -1,7 +1,7 @@
 package="tvstreamrecord"
-version="0.6.4c"
+version="1.0.0"
 maintainer="Pavion"
-description="Program to record TV streams. Python 2.x required. Server runs at port 8030 (changeable)"
+description="Program to record TV streams. Python required. Server runs at port 8030 (changeable)"
 reloadui="yes"
 arch="noarch"
 helpurl="http://github.com/Pavion/tvstreamrecord/wiki"
